# PythonHW

./: TASK1.ipynb  TASK2.ipynb  TASK3.ipynb
my_pr/: coldest_major_city_by_year_and_country.py  coldest_major_city_by_year_and_country_testing.py  pyproject.toml  setup.py
my_pr/homeproject.egg-info/: PKG-INFO  SOURCES.txt
