[tool.poetry]
name = "My project"
version = "1.3"
description="Get coldest major city by year and country"
authors = ["Egor Ershov"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.6"
pandas = "^1.5.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


